# Mqtt_bbs

./: .gitignore  README.md  agent.env.template  pyproject.toml  requirements.txt  start_all.bat  start_all.ps1
Mqtt_bbs_client/: README.md  README_EN.md  __init__.py  audit_log.py  board_client.py  client.py  config.py  mqtt_client_demo.py  mqtt_client_register.py  plugin.py  rate_limiter.py  registry.py  types.py
Mqtt_bbs_client/docs/: PLUGIN_DESIGN.md  SERVICE_COMMUNICATION_ARCHITECTURE.md
Mqtt_bbs_client/examples/: master_agent.py  test_persistence.py  worker_agent.py  worker_factory.py
Mqtt_bbs_server/: SECURITY_AUDIT.md  __init__.py  audit_log.py  bbs.py  board_config.py  board_core.py  board_db.py  board_handlers.py  board_service.py  boards.json  dag.py  file_transfer_v2.py  mqtt_agent_runner.py  persistence.py  persistence_worker.py  plugin_manager.py  plugin_signer.py  rate_limiter.py  scheduler.py  start_all.bat  start_all.ps1  test_auth_flow.py
Mqtt_bbs_server/db/: migrations.py
docs/: architecture_analysis.md
tools/: sign_plugin.py  start_worker.py
tools/board_service_rs/: Cargo.toml  build.ps1  build_launcher.vbs  launch_jwt.vbs  launch_svc.vbs  start_auth.bat  start_rs.vbs
tools/board_service_rs/src/: agent_board.rs  app_state.rs  capability.rs  config.rs  db.rs  file_transfer.rs  main.rs  models.rs  mqtt_handler.rs  observability.rs  plugin_ipc.rs  state_kv.rs
tools/board_service_rs/src/client/: bbs_client.rs  board_client.rs  mod.rs
tools/board_service_rs/src/handlers/: capability.rs  file.rs  mod.rs  post.rs  query.rs  register.rs  webhook.rs
tools/llm_cache_rs/: Cargo.toml
tools/llm_cache_rs/src/: cache.rs  lib.rs  main.rs  protocol.rs  server.rs  stats.rs
tools/mqtt_bbs_rs/: Cargo.toml
tools/mqtt_bbs_rs/src/: agent_board.rs  dag.rs  file_transfer.rs  lib.rs  models.rs  scheduler.rs  state_kv.rs  worker_agent.rs
tools/mqtt_bbs_rs/src/client/: bbs_client.rs  board_client.rs
tools/mqtt_webui_rs/: Cargo.toml  run_dashboard.cmd  start_worker.py
tools/mqtt_webui_rs/.cargo/: config.toml
tools/mqtt_webui_rs/src/: main.rs  patch_publish_endpoints.txt
tools/rmqtt_auth_rs/: Cargo.toml
tools/rmqtt_auth_rs/src/: main.rs
tools/simphtml_rs/: Cargo.toml
tools/simphtml_rs/src/: main.rs
