[package]
name = "llm_cache_rs"
version = "0.1.0"
edition = "2021"
description = "LLM Response Cache Daemon — 常驻内存的 LRU+LFU+TTL 缓存，通过 Named Pipe 为 Python Agent 提供高速缓存服务"

[dependencies]
tokio = { version = "1", features = ["rt", "macros", "sync", "time", "net", "io-util", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
parking_lot = "0.12"
dashmap = "6"
