[package]
name = "mqtt_bbs_rs"
version = "0.1.0"
edition = "2021"
description = "Mqtt_bbs Rust 客户端库 — BBSClient / BoardClient / AgentBoard / StateKV / FileTransfer"

[dependencies]
base64 = "0.22"
rumqttc = "0.25"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql", "chrono", "json"] }
chrono = { version = "0.4", features = ["serde"] }

